# HK_DataMiner

./: .gitignore  GEMINI.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
_tutorial_run/Tutorial/: ._XTC  ._align_atom_indices  ._atom_indices  ._trajlist  atom_indices  trajlist
cluster/: __init__.py  aplod_.py  kcenters_.py
hkdataminer/: cli.py  workflows.py
hkdataminer/cluster/: __init__ (stephen-desktop-linux's conflicted copy 2019-08-24).py  __init__.py  aplod_ (Stephen-TS-S4's conflicted copy 2019-10-13).py  aplod_.py  faiss_dbscan_.py  kcenters_.py
hkdataminer/lumping/: __init__.py  apm_.py  lumper_.py  pcca_.py  spectral_.py  ward_.py
hkdataminer/msm/: __init__.py  msm.py
hkdataminer/template_matching/: relion_tutorial.txt
hkdataminer/template_matching/Select_angle/: draw_heat_graph.py  index_angles_generating_cores.txt
hkdataminer/utils/: plot_.py
lumping/: __init__.py
metrics/: __init__.py  pairwise.py
msm/: __init__.py  msm.py
notebooks/: AlanineDipeptide_Tutorial.ipynb
scripts/: doLumping.py  plotLandscape.py  run_tutorial.sh  test_kcenters.py  test_kcenters_assign.py
tests/: test_import.py  test_smoke.py
utils/: __init__.py  plot_.py  reader_.py  utils.py
